css/style.css
/* ... */
.email-copy .email-copy__copied{
	left:50%;
	transform:translateX(-50%);
	font-size: 12px;
	line-height: 14px;
	color:#fff;
	padding:4px 9px;
	background-color:#000;
	border-radius: 250px;
}
.top__info .mobile-info{
	display: none;
}
.bottom__controls .mobile-info{
	display: none;
}
body.is-touch-device .bottom__controls .mobile-info{
	display: block;
}
body.is-touch-device .top__info .mobile-info{
	display: flex;
	align-items: center;
}
body.is-touch-device .bottom__controls>.btn__box , body.is-touch-device .bottom__controls>p{
	display: none;
}
body.is-touch-device .bottom__controls .mobile-info{
	width: 100%;
}
body.is-touch-device .bottom__controls .mobile-info>p{
    margin: 0px;
    margin-bottom: 16px;
    text-align: left;
    font-size: 14px;
    line-height: 18px;
    color: rgba(185, 185, 185, 1);
    font-weight: 400;
    opacity: .5;
}
body.is-touch-device .bottom__controls .mobile-info form{
	width: 100%;
}
body.is-touch-device .top__info .right>p  , body.is-touch-device .top__info .right>.btn__box{
	display: none;
}
.mobile-info form{
	width: 200px;
	position: relative;
}
.mobile-info form button img{
	width: 20px;
	transform:rotate(-90deg);
}
.mobile-info form button{
	display: inline-flex;
	border:0px;
	padding:0px;
	min-width: 24px;
	max-width: 24px;
	min-height: 24px;
	max-height: 24px;
	align-items: center;
	position: absolute;
	right:8px;
	top:50%;
	transform:translateY(-50%);
	justify-content: center;
	cursor:pointer;
	pointer-events: none;
	background-color: transparent;
}
.mobile-info form>input{
	width: 100%;
	height: 44px;
	border-radius: 250px;
	padding-left: 25px;
	padding-right: 25px;
	border:1px solid #8D5E48;
	background-color: transparent;
	font-size: 16px;
	padding-left: 15px;
	padding-right: 35px;
	color:#fff;
	outline:none;
    border: 1px solid rgba(217, 118, 87, 0.8);
    background-color: rgba(217, 118, 87, 0.05);
}
.project__popup>.inner .box .inn .desc{
	padding-left: 15px;
	padding-right: 15px;
}
.project__popup>.inner .box .inn .desc .desc__author{
	padding-top: 10px;
	padding-bottom: 10px;
}
.project__popup>.inner .box .inn .desc .desc__author-avatar{
	min-width: 32px;
	max-width: 32px;
	min-height: 32px;
	max-height: 32px;
}
.project__popup>.inner .box .inn .desc .desc__author-name{
	font-size: 15px;
	color:#fff;
}
.project__popup>.inner .box .inn .desc .desc__body .desc__detail .media{
	min-width: 30px;
	max-width: 30px;
	min-height: 30px;
	max-height: 30px;
}
.project__popup>.inner .box .inn .desc .desc__body .desc__detail .media>span{
	font-size: 14px;
}
.project__popup>.inner .box .inn .desc .desc__body .desc__detail{
	padding-top: 0px;
}
.project__popup>.inner .box .inn .desc:before{
	pointer-events: none;
}
.bottom__info .middle ul>li{
	border-radius:3px!important;	
}
.small-title>span {
	position: relative;
}
.small-title>span span{
	position: absolute;
	left:0px;
	bottom:-8px;
	font-size: 8px;
	color:rgb(130,130,130);
	line-height: 12px;
}
.project__popup .inn>.btn-popup>a{
	z-index: 3;
}
.mobile-info form.error input{
	border-color:red;
}
.mobile-info form>input{
	transition:.2s ease all;
}
.mobile-info>span{
	opacity:0;
	pointer-events: none;
	transition:.2s ease all;
}
.mobile-info>span.visible{
	opacity:1;
	pointer-events: initial;
}
.mobile-info form button{
	z-index: 3;
	pointer-events: initial;
}
.mobile-info>p , .mobile-info>form{
	transition:.2s ease all;
}
.mobile-info.submitted>p , .mobile-info.submitted>form{
	opacity:0!important;
	pointer-events: none!important;
}
.mobile-info{
	position: relative;
	font-size: 14px;
	line-height: 17px;
	color:rgba(185, 185, 185, 1);
	font-weight: 500;
	opacity:.5;
}
.mobile-info>span{

}
.mobile-info>span{
	position: absolute;
	left:50%;
	top:50%;
	transform:translate(-50% ,-50%);
}
@media (max-width: 1921px) and (max-height: 740px){

	.main__flow{
		padding-top: 15px;
	}
	.main__flow>.small-title{
		margin-bottom: 20px;
	}
	.main__flow .top__info>.left>h1{
		font-size: 34px;
		margin-bottom: 16px;
	}
	.main__flow .top__info>.left>p{
		font-size: 15px;
		line-height: 21px;
	}
	.main__flow .top__info>.right p{
		font-size: 12px;
		line-height: 16px;
	}
	.floating-new-item{
		margin-top: -3px;
	}
	.bottom__info>.left>h2 span{
		line-height: 40px;
	}
	.btn{
		min-height: 40px;
		font-size: 13px;
	}
	.btn__box{
		padding:6px 8px;
	}
	.templates__wrapper{
		margin-top: 30px;
		padding-top: 30px;
	}
	.templates__wrapper>h2{
		font-size: 24px;
	}
	.templates__grid .elem .author>p{
		font-size: 12px;
		line-height: 17px;
	}
	footer{
		margin-top: 35px;
		padding-top: 25px;
	}
	footer{
		max-width: 840px;
	}
	footer>ul>li>span{
		font-size: 12px;
	}
	footer>ul>li>a{
		font-size: 12px;
	}
	footer>ul>li{
		margin-bottom: 1px;
	}
	.bottom__controls{
		margin-top: 15px;
	}
	body.is-touch-device .bottom__controls .mobile-info>p{
		font-size: 12px;
		line-height: 16px;
		margin-bottom: 10px;
	}
	.floating-new-item .left , .floating-new-item .right{
		font-size: 12px;
	}
	.mobile-info form>input{
		height: 35px;
		font-size: 14px;
	}
	.mobile-info form button img{
		width: 16px;
	}
	.main__flow .top__info{
		margin-bottom: 15px;
	}
	.main__flow{
		max-width: 840px;
	}
	.bottom__info{
		margin-top: 40px;
	}
	.bottom__info .middle ul>li .right{
		font-size: 12px;
	}
	.bottom__info .middle ul>li .left{
		font-size: 12px;
	}
	.bottom__info .middle ul>li{
		line-height: 18px;
	}
	.bottom__info .middle{
		max-width: 400px;
	}
	.bottom__info>.left>h2{
		font-size: 34px;
	}
	.video__box{
		margin-bottom: 40px;
	}
	.main__flow>.small-title>span{
		font-size: 12px;
	}
	.main__flow>.small-title>a{
		font-size: 12px;
	}
}
/* ... */

